--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start:mockups": "DEBUG=mockups:* nodemon ./mockups/server.js"
   },
   "author": "",
   "license": "ISC",
@@ -12,6 +12,7 @@
     "express": "^4.18.1"
   },
   "devDependencies": {
-    "node-sass-middleware": "^1.0.1"
+    "node-sass-middleware": "^1.0.1",
+    "nodemon": "^2.0.19"
   }
 }
