--- a/package.json
+++ b/package.json
@@ -2,8 +2,11 @@
   "name": "hackerflix",
   "version": "0.0.1",
   "description": "",
-  "main": "index.js",
+  "main": "src/server.js",
   "scripts": {
+    "build": "rimraf dist/ && babel ./src --out-dir dist/ --ignore ./node_modules,./.babelrc,./nodemon.json,./package.json,./npm-debug.log,./mockups --copy-files && copyfiles -a config/* dist",
+    "start": "npm run build && node dist/server.js",
+    "start:dev": "nodemon",
     "start:mockups": "DEBUG=mockups:* nodemon ./mockups/server.js"
   },
   "author": "",
@@ -12,7 +15,14 @@
     "express": "^4.18.1"
   },
   "devDependencies": {
+    "@babel/cli": "^7.18.10",
+    "@babel/core": "^7.18.13",
+    "@babel/node": "^7.18.10",
+    "@babel/preset-env": "^7.18.10",
+    "copyfiles": "^2.4.1",
+    "cross-env": "^7.0.3",
     "node-sass-middleware": "^1.0.1",
-    "nodemon": "^2.0.19"
+    "nodemon": "^2.0.19",
+    "rimraf": "^3.0.2"
   }
 }
