--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "morgan": "^1.10.0",
+    "winston": "^3.8.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.18.10",
