--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "cross-env": "^7.0.3",
     "node-sass-middleware": "^1.0.1",
     "nodemon": "^2.0.19",
+    "redis": "^4.3.0",
     "rimraf": "^3.0.2"
   }
 }
