--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "hackerflix",
   "version": "0.0.1",
   "description": "",
-  "main": "src/server.js",
   "scripts": {
     "build": "rimraf dist/ && babel ./src --out-dir dist/ --ignore ./node_modules,./.babelrc,./nodemon.json,./package.json,./npm-debug.log,./mockups --copy-files && copyfiles -a config/* dist",
     "start": "npm run build && node dist/server.js",
@@ -20,6 +19,7 @@
     "express": "^4.18.1",
     "morgan": "^1.10.0",
     "node-fetch": "^2.6.7",
+    "redis-om": "^0.3.6",
     "winston": "^3.8.1"
   },
   "devDependencies": {
