--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "config": "^3.3.7",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "googleapis": "^107.0.0",
     "morgan": "^1.10.0",
     "node-fetch": "^2.6.7",
     "redis-om": "^0.3.6",
