--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "hackerflix",
   "version": "0.0.1",
   "description": "",
+  "private": true,
   "scripts": {
-    "build": "rimraf dist/ && babel ./src --out-dir dist/ --ignore ./node_modules,./.babelrc,./nodemon.json,./package.json,./npm-debug.log,./mockups --copy-files && copyfiles -a config/* dist",
-    "start": "npm run build && node dist/server.js",
-    "start:dev": "nodemon",
-    "start:mockups": "DEBUG=mockups:* nodemon ./mockups/server.js"
+    "start": "node dist/server.js",
+    "dev:client": "webpack --mode=development",
+    "build:server": "rimraf dist/ && babel ./src --out-dir dist/ --ignore ./node_modules,./.babelrc,./nodemon.json,./package.json,./npm-debug.log,./mockups --copy-files && copyfiles -a config/* dist"
   },
   "engines": {
     "node": ">= 16.15.0"
@@ -29,11 +29,18 @@
     "@babel/core": "^7.18.13",
     "@babel/node": "^7.18.10",
     "@babel/preset-env": "^7.18.10",
+    "babel-loader": "^8.2.5",
     "copyfiles": "^2.4.1",
     "cross-env": "^7.0.3",
+    "css-loader": "^6.7.1",
+    "mini-css-extract-plugin": "^2.6.1",
+    "node-sass": "^7.0.3",
     "node-sass-middleware": "^1.0.1",
     "nodemon": "^2.0.19",
     "redis": "^4.3.0",
-    "rimraf": "^3.0.2"
+    "rimraf": "^3.0.2",
+    "sass-loader": "^13.0.2",
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0"
   }
 }
