--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "description": "",
   "private": true,
   "scripts": {
-    "start": "node dist/server.js",
-    "dev:client": "webpack --mode=development",
-    "build:server": "rimraf dist/ && babel ./src --out-dir dist/ --ignore ./node_modules,./.babelrc,./nodemon.json,./package.json,./npm-debug.log,./mockups --copy-files && copyfiles -a config/* dist"
+    "clean": "rimraf dist/",
+    "start": "npm run build:server && node dist/server.js",
+    "dev": "npm run clean && npm-run-all -l -p dev:server dev:client",
+    "dev:client": "webpack --config webpack.development.js --watch",
+    "dev:server": "nodemon",
+    "build:server": "babel ./src --out-dir dist/ --ignore ./node_modules,./.babelrc,./nodemon.json,./package.json,./npm-debug.log,./mockups --copy-files && copyfiles -a config/* dist"
   },
   "engines": {
     "node": ">= 16.15.0"
@@ -37,10 +40,12 @@
     "node-sass": "^7.0.3",
     "node-sass-middleware": "^1.0.1",
     "nodemon": "^2.0.19",
+    "npm-run-all": "^4.1.5",
     "redis": "^4.3.0",
     "rimraf": "^3.0.2",
     "sass-loader": "^13.0.2",
     "webpack": "^5.74.0",
-    "webpack-cli": "^4.10.0"
+    "webpack-cli": "^4.10.0",
+    "webpack-merge": "^5.8.0"
   }
 }
