--- a/.env.example
+++ b/.env.example
@@ -2,5 +2,6 @@ PORT=3000
 GOOGLE_APPLICATION_CREDENTIALS=
 GOOGLE_SHEET_ID=
 GOOGLE_SHEET_DATA_RANGE=
-REDIS_URL=redis://localhost:6379
+REDIS_URL=
 TMDB_ACCESS_TOKEN=
+TMDB_LIST_ID=
