feat: add production config and build scripts

--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "private": true,
   "scripts": {
     "clean": "rimraf dist/",
-    "start": "npm run build:server && node dist/server.js",
+    "start": "node dist/server.js",
+    "build": "npm-run-all -l -s clean build:server build:client",
     "dev": "npm run clean && npm-run-all -l -p dev:server dev:client",
     "dev:client": "webpack --config webpack.development.js --watch",
-    "dev:server": "nodemon",
+    "dev:server": "npm run build:server && nodemon",
+    "build:client": "webpack --config webpack.production.js",
     "build:server": "babel ./src --out-dir dist/ --ignore ./node_modules,./.babelrc,./nodemon.json,./package.json,./npm-debug.log,./mockups --copy-files && copyfiles -a config/* dist",
     "prepare": "husky install",
     "pretty-quick": "pretty-quick",
