--- a/config/hackerflix.nginx.conf
+++ b/config/hackerflix.nginx.conf
@@ -1,6 +1,6 @@
 server {
   listen 80;
-  server_name hackerflix.net www.hackerflix.net;
+  server_name hackerflix.net www.hackerflix.net dev.hackerflix.net;
 
   location / {
     proxy_set_header  X-Forwarded-For $remote_addr;
